--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="description" content="JS-discourseBestOf : A jQuery based implementation of wp-discourse." />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+    <script src="javascripts/js-discourse.js"></script>
     <title>JS-discourseBestOf</title>
   </head>
 
@@ -67,8 +68,9 @@
 
 <h3>
 <a name="let-me-see-it-in-action" class="anchor" href="#let-me-see-it-in-action"><span class="octicon octicon-link"></span></a>Let me see it in action!</h3>
+These comments are the best from <a href="http://forums.cityfellas.com/t/js-discourse-example/262"> this thread on my discourse install.</a>
+<div id="comments" tid="262"></div>
 
-<p>Okay! In the next revision of this page, I'll put in the live loader right here.</p>
       </section>
     </div>
 
